# emperor-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  PROJECT_AUDIT_REPORT.md  README.md  SECURITY.md  model_config.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  webui.py
agent/: attachments.py  cli.py  compactor.py  context.py  local_config.py  logger.py  loop.py  memory.py  memory_history.py  memory_versions.py  model_config.py  model_router.py  onboarding.py  runner.py  runner_factory.py  runner_helpers.py  runner_model.py  sidebar_state.py  skill_requests.py  skills.py  telemetry.py  webui.py  workspace.py
assets/: PROMPT_PREFIX.md
desktop/: .npmrc  config.js  electron-builder.preview.cjs  electron-builder.release.cjs  electron-builder.yml  electron.vite.config.ts  eslint.config.js  health.js  lifecycle.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.node.json  tsconfig.test-web.json  tsconfig.web.json  vite.renderer.config.ts  vitest.config.ts
desktop-pet/: event-mapper.js  main.js  package-lock.json  package.json  preload.js  renderer.html  renderer.js
docs/: DOCUMENTATION.md  README.md  agent-execution-logic.md
scripts/: assemble-release-bundle.mjs  build_desktop_release.sh  check.sh  check_migration_parity.mjs  check_public_docs.mjs  merge-cyclonedx-sboms.mjs  preview-release-contract.mjs  verify-linux-release.sh  write-environment-adapter-receipt.mjs
templates/: SOUL.md  TOOL.md  USER.md
webui/: index.html  package-lock.json  package.json  tailwind.config.ts  (+2 more)
(+588 files in other folders)
