[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "emperor-agent"
version = "0.1.0"
description = "A local AI agent with WebUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "anthropic>=0.80,<1.0",
    "aiohttp>=3.9.0,<4.0.0",
    "boto3>=1.34.0",
    "croniter>=6.0.0,<7.0.0",
    "filelock>=3.13.0,<4.0.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1.0",
    "json-repair>=0.30.0,<1.0.0",
    "loguru>=0.7.0,<1.0.0",
    "mcp>=1.0.0",
    "openai>=1.50,<2.0",
    "pypdf>=4.0,<6.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
